# VulkanFramework

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  Thoughts.blog  generate_extension_assoc.py  temp.csv
cmake/: aftermath.cmake  glfw.cmake  slang.cmake  vulkan.cmake
examples/: CMakeLists.txt  disabled_CMakeLists.txt  triangle_hello_world.cpp
examples/common/shaders/: GlobalPushConstant.glsl  basic copy.frag  basic copy.vert  basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  compile.bat
include/EightWinds/: BackendEncapsulator.h  Buffer.h  CombinedImageSampler.h  CommandBuffer.h  CommandPool.h  DebugMessenger.h  DebugUtil.h  DescriptorImageInfo.h  DescriptorPool.h  DescriptorSetLayout.h  Device.h  DeviceExtensionHandling.h  Fence.h  Framework.h  GlobalPushConstant.h  Image.h  ImageView.h  Instance.h  LogicalDevice.h  Material.h  ObjectBase.h  ObjectRasterConfig.h  PerFlight.h  PhysicalDevice.h  PhysicalDeviceHelpers.h  PipelineBarrier.h  Preprocessor.h  Queue.h  QueueFamily.h  RasterTask.cpp  RenderAttachment.h  Sampler.h  Semaphore.h  Shader.h  ShaderFactory.h  SwapChain.h  Swapchain.h  VulkanHash.h  VulkanHeader.h  Window.h
include/EightWinds/Backend/: CommandBuffer.h  CommandCallbacks.h  DSLCache.h  DebugMessenger.h  DescriptorPool.h  Exception.h  Fence.h  GarbageDisposal.h  Logger.h  PerFlightDebugViewer.h  PipelineBarrier.h  QueueFamily.h  RenderInfo.h  RenderInfo3.h  STC_Helper.h  STC_Manager.h  Semaphore.h  ShaderSpecialization.h  ShaderStage.h  ShaderVariable.h  SingleTimeCommand.h  StagingBuffer.h  SubmitInfo.h
include/EightWinds/Backend/Descriptor/: Binding.h  Bindless.h  DescriptorPool.h  LayoutCache.h  SetLayout.h
include/EightWinds/Backend/Descriptors/: Binding.h  LayoutCache.h  SetLayout.h
include/EightWinds/Backend/DeviceSpecialization/: DeviceSpecialization.h  Extensions.h  FeatureProperty.h  FeaturePropertyPack.h  Scoring.h
include/EightWinds/Backend/nvidia/: Aftermath.h
include/EightWinds/Command/: CommandBuffer.h  CommandPool.h  ComputeInstructionPackage.h  Execute.h  IP_Helper.h  Instruction.h  InstructionPackage.h  InstructionPointer.h  InstructionType.h  ObjectInstructionPackage.h  PackageRecord.h  ParamPacks.h  ParamPointerChain.h  ParamPool.h  RasterInstructionPackage.h  Record.h  STC.h  STC_Helper.h  STC_Manager.h
include/EightWinds/Data/: Address.h  Color.h  ForwardArgConstructionHelper.h  HeapBlock.h  Hive.h  KeyValueContainer.h  MemoryBlock.h  MemoryHelpers.h  PerFlight.h  Pointer.h  ResizeableBitset.h  RingBuffer.h  RuntimeArray.h  StackBlock.h  StreamHelper.h
include/EightWinds/Data/Fiber/: Context.h  Pool.h  Scheduler.h
include/EightWinds/Helpers/: DeviceExtensionHandling.h  DeviceScoring.h  DeviceSpecialization.h  ExtensionAssociation.h  ExtensionHandler.h  FeatureProperty.h
include/EightWinds/NodeGraph/: Graph.h  Link.h  Node.h  Pin.h
include/EightWinds/Pipeline/: Compute.h  Graphics.h  Layout.h  PipelineBase.h  PipelineSystem.h  TaskRasterConfig.h
include/EightWinds/Reflect/: Enum.h  Reflect.h  Struct.h
include/EightWinds/RenderGraph/: GPUTask.h  PresentBridge.h  PresentSubmission.h  RasterPackage.h  RasterTask.h  RenderGraph.h  RenderStep.h  RenderSubstep.h  Resources.h  STCs.h  SubmissionTask.h  SynchronizationManager.h  TaskAffix.h  TaskBridge.h
include/EightWinds/RenderGraph/Command/: DeferredReference.h  Execute.h  IP_Helper.h  Instruction.h  InstructionPackage.h  InstructionPointer.h  ParamPacks.h  RasterInstructionPackage.h  Record.h
src/: BackendEncapsulator.cpp  Binding.cpp  Bindless.cpp  Buffer.cpp  CommandBuffer.cpp  CommandExecute.cpp  CommandInstruction.cpp  CommandPool.cpp  CommandRecord.cpp  Compute.cpp  ComputePipeline.cpp  DSLCache.cpp  DebugMessenger.cpp  DebugUtil.cpp  DescriptorImageInfo.cpp  DescriptorSetLayout.cpp  Device.cpp  Exception.cpp  ExtensionAssociation.cpp  Fence.cpp  FiberContext.cpp  FiberPool.cpp  FiberScheduler.cpp  Framework.cpp  GPUTask.cpp  GarbageDisposal.cpp  GlobalPushConstant.cpp  Graphics.cpp  GraphicsPipeline.cpp  Image.cpp  ImageView.cpp  Instance.cpp  InstructionPackage.cpp  Layout.cpp  LayoutCache.cpp  Logger.cpp  LogicalDevice.cpp  Node.cpp  ObjectInstructionPackage.cpp  ObjectRasterConfig.cpp  (+40 more)
